<resources>
    <string name="app_name">CompraVenta</string>
    <string name="title">Titulo *</string>
    <string name="description">Descripción</string>
    <string name="mail">Correo de contacto</string>
    <string name="price">Precio *</string>
    <string name="category">Categoría</string>
    <string name="address">Dirección de retiro *</string>
    <string name="discount">Ofrecer descuento de envío</string>
    <string name="inPerson">Retiro en persona</string>
    <string name="terms">Aceptar los términos y condiciones *</string>
    <string name="publish">Publicar</string>

    <string-array name="category">
        <item>INDUMENTARIA</item>
        <item>ELECTRONICA</item>
        <item>ENTRETENIMIENTO</item>
        <item>JARDIN</item>
        <item>VEHICULOS</item>
        <item>JUGUETES</item>
    </string-array>

</resources>