<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/lightColor">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <EditText
                android:id="@+id/editTextTitle"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textAutoCorrect|textCapSentences" />

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/editTextDesc"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
                android:minHeight="200px" />

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail" />

            <EditText
                android:id="@+id/editTextMail"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:id="@+id/editTextPrice"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:digits="0123456789,"/>

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/spinnerCategory"
                style="@style/Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switchDiscount"
                style="@style/Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount" />


            <TextView
                android:id="@+id/percentage"
                style="@style/infoDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <SeekBar
                android:id="@+id/seekBarDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBoxInPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inPerson" />


            <TextView
                android:id="@+id/addressTitle"
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/editTextAddress"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="text" />
            <CheckBox
                android:id="@+id/checkBoxTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                style="@style/button"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>